src/Domain/Compiler/Tests/Expression/BinaryExpression/OverflowError/__Baselines__/U64MaxOverflow_Begin-StashIr.error
error: Integral expression exceeds global maximum limit (u64_max).
--> main.hs:7:16
  | 
7 |         return 18446744073709551615 + 1;
  |                ^^^^^^^^^^^^^^^^^^^^^^^^
